Add ts types for environment values and change server files structure
Move typeorm relative files to typeorm folder

--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>Welcome to question-answer!</h1>
 <p>Message: {{ (hello$ | async)?.message }}</p>
 
-<a href="/api/google/login">login with Google</a>
+<a href="/api/auth/google/login">login with Google</a>
