feat: add tag with mock data

--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Welcome to question-answer!</h1>
 <p>Message: {{ (hello$ | async)?.message }}</p>
+<p>Tags: {{ (tags$ | async)?.join(', ') }}</p>
 
 <a href="/api/auth/google/login">login with Google</a>
