feat: header, footer, login form

--- a/apps/client/src/app/core/layout/components/footer/footer.component.html
+++ b/apps/client/src/app/core/layout/components/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer>
+  <div class="container">
+    <section>
+      <h2>Project links:</h2>
+      <ul aria-label="project links">
+        <li><a href="https://github.com/obiwan00/question-answer">Project GitHub</a></li>
+        <li><a href="https://github.com/obiwan00" rel="author">Author</a></li>
+      </ul>
+    </section>
+    <small>Created in <time datetime="2022-12">2022</time></small>
+  </div>
+</footer>
