refactor: align styles

--- a/apps/client/src/app/shared/components/rating/rating.component.html
+++ b/apps/client/src/app/shared/components/rating/rating.component.html
@@ -6,7 +6,7 @@
 >
   👍
 </button>
-<div class="count" aria-label="rating">
+<div class="count" aria-label="rating" class="rating">
   {{ rating }}
 </div>
 <button
