--- a/apps/client/src/app/topic/components/topics-feed/topics-feed.component.scss
+++ b/apps/client/src/app/topic/components/topics-feed/topics-feed.component.scss
@@ -5,3 +5,12 @@ qa-topic {
 .container {
   max-width: 800px;
 }
+
+qa-search-bar {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.sub-search-bar-text {
+  margin-bottom: 20px;
+}
