--- a/apps/client/src/app/core/layout/components/header/header.component.html
+++ b/apps/client/src/app/core/layout/components/header/header.component.html
@@ -4,32 +4,44 @@
       <img
         class="logo"
         src="/assets/images/qa-logo.png"
-        alt="Question and answer"
-      />
+        alt="Question and answer">
     </a>
     <nav class="navigation-main">
       <ul>
-        <li><a [routerLink]="['topics']" mat-button>Home</a></li>
-        <li><a [routerLink]="['topics', 'user']" mat-button>Your topics</a></li>
-        <li><a [routerLink]="['about']" mat-button>About</a></li>
+        <li><a
+            [routerLink]="['topics']"
+            mat-button>
+            Home
+          </a></li>
+        <li><a
+            [routerLink]="['about']"
+            mat-button>
+            About
+          </a></li>
       </ul>
     </nav>
     <div class="auth-buttons">
       <ng-container *ngIf="isLoggedIn; else notLoggedInContent">
-        <button (click)="logout()" mat-raised-button color="primary">
+        <button
+          (click)="logout()"
+          mat-raised-button
+          color="primary">
           Logout
         </button>
       </ng-container>
       <ng-template #notLoggedInContent>
-        <a [routerLink]="['auth/login']" mat-raised-button color="primary"
-          >Login</a
-        >
+        <a
+          [routerLink]="['auth/login']"
+          mat-raised-button
+          color="primary">
+          Login
+        </a>
         <a
           [routerLink]="['auth', 'registration']"
           mat-raised-button
-          color="primary"
-          >Sign On</a
-        >
+          color="primary">
+          Sign On
+        </a>
       </ng-template>
     </div>
   </div>
