--- a/apps/client/src/app/core/layout/components/header/header.component.scss
+++ b/apps/client/src/app/core/layout/components/header/header.component.scss
@@ -16,11 +16,13 @@ header {
   width: 80px;
   height: auto;
   display: block;
+  flex-shrink: 0;
 }
 
 .navigation-main {
   max-width: 600px;
-  width: 100%;
+  flex-grow: 1;
+  padding: 0 20px;
 }
 
 ul {
