feat: single topic page with answers

--- a/apps/client/src/app/core/layout/components/header/header.component.html
+++ b/apps/client/src/app/core/layout/components/header/header.component.html
@@ -9,12 +9,12 @@
     <nav class="navigation-main">
       <ul>
         <li><a
-            [routerLink]="['topics']"
+            [routerLink]="['/', 'topics']"
             mat-button>
             Home
           </a></li>
         <li><a
-            [routerLink]="['about']"
+            [routerLink]="['/', 'about']"
             mat-button>
             About
           </a></li>
