--- a/apps/client/src/styles/_theme.scss
+++ b/apps/client/src/styles/_theme.scss
@@ -18,3 +18,7 @@ $light-theme: mat.define-light-theme(
 );
 
 @include mat.all-component-colors($light-theme);
+
+body {
+  background: mat.get-color-from-palette($light-primary, 50);
+}
