--- a/apps/client/src/app/topic/components/topic/topic.component.html
+++ b/apps/client/src/app/topic/components/topic/topic.component.html
@@ -7,36 +7,39 @@
     (like)="likeTopic()"
     (dislike)="dislikeTopic()"></qa-rating>
   <main class="topic__main">
-    <mat-card-title>
-      <h2 class="topic__title">
-        <a [routerLink]="['/', 'topics', topic.slug]">{{ topic.title }}</a>
-      </h2>
-    </mat-card-title>
-    <mat-card-subtitle>
-      <div class="topic__author">Author: {{ topic.author.username }}</div>
-    </mat-card-subtitle>
-    <mat-card-content>
-      <p class="topic__body mat-display-1">{{ topic.body }}</p>
-      <div class="topic__tags tags">
-        Tags:
-        <ul class="tags__list">
-          <li
-            *ngFor="let tag of topic.tags"
-            class="tags__item">{{ tag }}</li>
-        </ul>
+    <h2 class="topic__title">
+      <a [routerLink]="['/', 'topics', topic.slug]">{{ topic.title }}</a>
+    </h2>
+    <h3 class="topic__author">Author: {{ topic.author.username }}</h3>
+    <p class="topic__body mat-h3">{{ topic.body }}</p>
+    <div class="topic__secondary">
+      <div>
+        <div class="topic__tags tags">
+          Tags:
+          <ul class="tags__list">
+            <li
+              *ngFor="let tag of topic.tags"
+              class="tags__item">
+              {{ tag }}
+            </li>
+          </ul>
+        </div>
+        <p>
+          Answers count: {{topic.answersCount}} {{topic.hasAcceptedAnswer ? '(has accepted ✅)' : null}}
+        </p>
       </div>
       <ul class="topic__dates">
         <li>
-          <time [dateTime]="topic.createdAt">
+            <time [dateTime]="topic.createdAt">
             Created at: {{ topic.createdAt | date }}
           </time>
-        </li>
+          </li>
         <li>
-          <time [dateTime]="topic.updatedAt">
+            <time [dateTime]="topic.updatedAt">
             Updated at: {{ topic.updatedAt | date }}
           </time>
-        </li>
+          </li>
       </ul>
-    </mat-card-content>
+    </div>
   </main>
 </mat-card>
