--- a/apps/client/src/app/topic/components/topic/topic.component.scss
+++ b/apps/client/src/app/topic/components/topic/topic.component.scss
@@ -1,3 +1,6 @@
+@use "@angular/material" as mat;
+@import "theme";
+
 .topic {
   display: flex;
 
@@ -5,37 +8,58 @@
     padding-right: 20px;
     border-right: 2px solid black;
     margin-right: 20px;
+    flex-shrink: 0;
   }
 
   &__main {
+    flex-grow: 1;
   }
 
   &__title {
+    font-size: 22px;
+    margin-bottom: 8px;
   }
 
   &__author {
+    font-size: 18px;
+    margin-bottom: 16px;
   }
 
   &__body {
     margin-bottom: 20px;
   }
 
+  &__secondary {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+
   &__tags {
   }
 
   &__dates {
+    flex-shrink: 0;
+    text-align: end;
+    color: gray;
   }
 }
 .tags {
+  display: flex;
+
   &__list {
-    display: flex;
+    margin-left: 10px;
+    display: inline-flex;
     flex-wrap: wrap;
   }
 
   &__item {
     margin-right: 6px;
+    margin-bottom: 4px;
     padding: 2px 8px;
     border-radius: 10px;
-    background-color: lightgray;
+    background-color: mat.get-color-from-palette($light-primary, 300);
+    border: 1px solid mat.get-color-from-palette($light-primary, 800);
+    color: white;
   }
 }
