--- a/apps/client/src/styles/_theme.scss
+++ b/apps/client/src/styles/_theme.scss
@@ -22,3 +22,6 @@ $light-theme: mat.define-light-theme(
 body {
   background: mat.get-color-from-palette($light-primary, 50);
 }
+.mat-simple-snackbar-action button {
+  color: mat.get-color-from-palette($light-warn, 300);
+}
