--- a/apps/client/src/app/topic/components/topics-feed/topics-feed.component.html
+++ b/apps/client/src/app/topic/components/topics-feed/topics-feed.component.html
@@ -1,12 +1,13 @@
 <qa-spinner [active]="isLoading"></qa-spinner>
 <div class="container container--narrow">
   <qa-search-bar
-    (reset)="resetTopicsSearchAndFetchTopics()"
+    [disabled]="isLoading"
+    (resetSearch)="resetTopicsSearchAndFetchTopics()"
     (search)="fetchTopicsBySearchQuery($event)"></qa-search-bar>
   <div
     class="sub-search-bar-text"
-    *ngIf="searchQuery">
-    Search results by query "{{searchQuery}}":
+    *ngIf="topicRequestQueryParams.search">
+    Search results by query "{{topicRequestQueryParams.search}}":
   </div>
   <qa-topic
     *ngFor="let topic of (topics$ | async)?.topics"
