improve: header nav styles

--- a/apps/client/src/app/core/layout/components/header/header.component.html
+++ b/apps/client/src/app/core/layout/components/header/header.component.html
@@ -10,11 +10,13 @@
       <ul>
         <li><a
             [routerLink]="['/', 'topics']"
+            routerLinkActive="active"
             mat-button>
-            Home
+            Topics
           </a></li>
         <li><a
             [routerLink]="['/', 'about']"
+            routerLinkActive="active"
             mat-button>
             About
           </a></li>
