--- a/apps/client/src/app/core/layout/components/header/header.component.scss
+++ b/apps/client/src/app/core/layout/components/header/header.component.scss
@@ -23,6 +23,15 @@ header {
   max-width: 600px;
   flex-grow: 1;
   padding: 0 20px;
+
+  a {
+    font-size: 16px;
+
+    &.active {
+      text-decoration: underline;
+      color: mat.get-color-from-palette($light-accent, 500);
+    }
+  }
 }
 
 ul {
