--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "reset";
-@import "theme";
+@import "theme-config";
+@import "theme-variables";
+@import "theming";
 @import "typography";
 @import "layout";
