--- a/apps/client/src/app/shared/components/spinner/spinner.component.scss
+++ b/apps/client/src/app/shared/components/spinner/spinner.component.scss
@@ -1,10 +1,6 @@
-@use "@angular/material" as mat;
-@import "theme";
+@import "theme-variables";
 
 .spinner {
-  $spinnerColor: mat.get-color-from-palette($light-primary);
-  $backgroundColor: rgba(mat.get-color-from-palette($light-primary, 100), 0.7);
-
   position: fixed;
   z-index: 999;
   top: 0;
