--- a/apps/client/src/app/topic/components/topic/topic.component.scss
+++ b/apps/client/src/app/topic/components/topic/topic.component.scss
@@ -1,5 +1,4 @@
-@use "@angular/material" as mat;
-@import "theme";
+@import "theme-variables";
 
 .topic {
   display: flex;
@@ -17,24 +16,31 @@
 
   &__header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    margin-bottom: 8px;
   }
 
   &__title {
     font-size: 22px;
-    margin-bottom: 8px;
   }
 
   &__author {
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 16px;
   }
 
   &__body {
-    margin-bottom: 20px;
+    white-space: pre;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid $accent-field-border;
+    background-color: $accent-field-background;
   }
 
   &__footer {
+    margin-top: 30px;
+
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
@@ -63,8 +69,8 @@
     margin-bottom: 4px;
     padding: 2px 8px;
     border-radius: 10px;
-    background-color: mat.get-color-from-palette($light-primary, 300);
-    border: 1px solid mat.get-color-from-palette($light-primary, 800);
-    color: white;
+    background-color: $tag-item-background;
+    border: 1px solid $tag-item-border;
+    color: black;
   }
 }
