--- a/apps/client/src/app/core/layout/components/header/header.component.scss
+++ b/apps/client/src/app/core/layout/components/header/header.component.scss
@@ -1,47 +1,79 @@
 @import "theme-variables";
 
-header {
+.header {
   border-bottom: 2px solid black;
   padding: 5px 0;
   background: $app-header-color;
-}
 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-.logo {
-  width: 80px;
-  height: auto;
-  display: block;
-  flex-shrink: 0;
-}
+  &__logo {
+    width: 80px;
+    height: auto;
+    display: block;
+    flex-shrink: 0;
+  }
 
-.navigation-main {
-  max-width: 600px;
-  flex-grow: 1;
-  padding: 0 20px;
+  &__nav {
+    max-width: 500px;
+    flex-grow: 1;
+    padding: 0 20px;
 
-  a {
-    font-size: 16px;
+    ul {
+      display: flex;
+    }
 
-    &.active {
-      text-decoration: underline;
-      color: $app-header-active-link-color;
+    a {
+      font-size: 16px;
+
+      &.active {
+        text-decoration: underline;
+        color: $app-header-active-link-color;
+      }
+    }
+  }
+
+  &__action-buttons {
+    display: flex;
+    align-items: center;
+
+    br {
+      content: "";
+      border: 1px solid black;
+      margin: 0 10px;
+      align-self: stretch;
+    }
+
+    a {
+      margin: 0 10px;
+    }
+  }
+
+  &__authenticated {
+    display: flex;
+
+    .profile {
+      margin-right: 16px;
     }
   }
 }
 
-ul {
-  display: flex;
-}
+.profile {
+  $profile-icon-size: 40px;
 
-.auth-buttons {
   display: flex;
+  align-items: center;
 
-  a {
-    margin: 0 10px;
+  mat-icon {
+    color: $profile-icon-color;
+    font-size: $profile-icon-size;
+    width: $profile-icon-size;
+    height: $profile-icon-size;
+
+    margin-right: 6px;
   }
 }
