--- a/apps/client/src/app/answer/components/answer/answer.component.html
+++ b/apps/client/src/app/answer/components/answer/answer.component.html
@@ -21,10 +21,11 @@
       <div class="answer__action-buttons">
         <button
           *ngIf="answer.isCurrentUserAnswerAuthor"
-          (click)="editAnswer()"
           mat-icon-button
           aria-label="edit answer"
-          color="accent">
+          color="accent"
+          (click)="editAnswer()"
+          [disabled]="isDisabled">
           <mat-icon>edit</mat-icon>
         </button>
         <button
@@ -45,15 +46,15 @@
     <footer class="answer__footer">
       <ul class="answer__dates">
         <li>
-              <time [dateTime]="answer.createdAt">
+          <time [dateTime]="answer.createdAt">
             Created at: {{ answer.createdAt | date:'medium' }}
           </time>
-            </li>
+        </li>
         <li>
-              <time [dateTime]="answer.updatedAt">
+          <time [dateTime]="answer.updatedAt">
             Updated at: {{ answer.updatedAt | date:'medium' }}
           </time>
-            </li>
+          </li>
       </ul>
     </footer>
   </div>
