--- a/apps/client/src/app/answer/components/edit-answer/edit-answer.component.html
+++ b/apps/client/src/app/answer/components/edit-answer/edit-answer.component.html
@@ -27,7 +27,7 @@
         mat-raised-button
         color="primary"
         [disabled]="isSubmitDisabled">
-        Edit topic
+        Edit answer
       </button>
     </mat-card-actions>
   </mat-card>
