--- a/apps/client/src/app/shared/components/spinner/spinner.component.scss
+++ b/apps/client/src/app/shared/components/spinner/spinner.component.scss
@@ -5,7 +5,7 @@
   z-index: 999;
   top: 0;
   left: 0;
-  background-color: $backgroundColor;
+  background-color: $background-color;
   width: 100%;
   height: 100%;
 
@@ -28,8 +28,8 @@
       display: block;
       margin: 8px;
       border-radius: 50%;
-      border: 6px solid $spinnerColor;
-      border-color: $spinnerColor transparent $spinnerColor transparent;
+      border: 6px solid $spinner-color;
+      border-color: $spinner-color transparent $spinner-color transparent;
       box-sizing: border-box;
     }
 
