--- a/apps/client/src/app/topic/components/topic-single/topic-single.component.html
+++ b/apps/client/src/app/topic/components/topic-single/topic-single.component.html
@@ -2,57 +2,72 @@
 <div class="container container--narrow">
   <ng-container *ngIf="topicWithAnswers">
     <qa-topic [topic]="topicWithAnswers"></qa-topic>
-    <section class="answers">
-      <div class="answers__actions">
-        <button
-          *ngIf="!isShowingCreateAnswer"
-          mat-raised-button
-          color="accent"
-          [disabled]="isAnswersLoading"
-          (click)="handleAddNewAnswerClick()">
-          Add your answer
-          <mat-icon>post_add</mat-icon>
-        </button>
-      </div>
-      <header class="answers__header">
-        <h3
-          class="answers__title"
-          *ngIf="topicWithAnswers.answers.length !== 0; else noAnswers">
-          Answers:
-        </h3>
-        <ng-template #noAnswers>
-          <h3 class="answers__title">
-          There is no any answer yet =(
-        </h3>
+
+    <mat-tab-group class="tabs">
+      <mat-tab label="Answers">
+        <ng-template matTabContent>
+          <section class="answers">
+            <div class="answers__actions">
+              <button
+                *ngIf="!isShowingCreateAnswer"
+                mat-raised-button
+                color="accent"
+                [disabled]="isAnswersLoading"
+                (click)="handleAddNewAnswerClick()">
+                Add your answer
+                <mat-icon>post_add</mat-icon>
+              </button>
+            </div>
+            <header class="answers__header">
+              <h3
+                class="answers__title"
+                *ngIf="topicWithAnswers.answers.length !== 0; else noAnswers">
+                    Answers:
+                  </h3>
+              <ng-template #noAnswers>
+                <h3 class="answers__title">
+                    There is no any answer yet =(
+                  </h3>
+              </ng-template>
+            </header>
+            <main class="answers__main">
+              <qa-create-answer
+                *ngIf="isShowingCreateAnswer"
+                (cancel)="handleCancelCreateAnswer()"
+                (create)="handleCreateNewAnswer($event)"
+                [disabled]="isAnswersLoading"
+                [topicId]="topicWithAnswers.id"></qa-create-answer>
+              <ng-container *ngFor="let answer of topicWithAnswers.answers">
+                <qa-answer
+                  *ngIf="answer.id !== answerToEditId; else editAnswer"
+                  class="answers__item"
+                  [answer]="answer"
+                  [disabled]="isAnswersLoading"
+                  [showAcceptButton]="topicWithAnswers.isCurrentUserTopicAuthor"
+                  (accept)="acceptAnswerById($event)"
+                  (edit)="editAnswerById($event)"
+                  (loading)="handleAnswerLoading($event)"></qa-answer>
+                <ng-template #editAnswer>
+                  <qa-edit-answer
+                    class="answers__item"
+                    [answer]="answer"
+                    [disabled]="isAnswersLoading"
+                    (cancel)="handleCancelEditAnswer()"
+                    (edit)="handleEditAnswer($event)"></qa-edit-answer>
+                </ng-template>
+              </ng-container>
+            </main>
+          </section>
         </ng-template>
-      </header>
-      <main class="answers__main">
-        <qa-create-answer
-          *ngIf="isShowingCreateAnswer"
-          (cancel)="handleCancelCreateAnswer()"
-          (create)="handleCreateNewAnswer($event)"
-          [disabled]="isAnswersLoading"
-          [topicId]="topicWithAnswers.id"></qa-create-answer>
-        <ng-container *ngFor="let answer of topicWithAnswers.answers">
-          <qa-answer
-            *ngIf="answer.id !== answerToEditId; else editAnswer"
-            class="answers__item"
-            [answer]="answer"
-            [disabled]="isAnswersLoading"
-            [showAcceptButton]="topicWithAnswers.isCurrentUserTopicAuthor"
-            (accept)="acceptAnswerById($event)"
-            (edit)="editAnswerById($event)"
-            (loading)="handleAnswerLoading($event)"></qa-answer>
-          <ng-template #editAnswer>
-            <qa-edit-answer
-              class="answers__item"
-              [answer]="answer"
-              [disabled]="isAnswersLoading"
-              (cancel)="handleCancelEditAnswer()"
-              (edit)="handleEditAnswer($event)"></qa-edit-answer>
-          </ng-template>
-        </ng-container>
-      </main>
-    </section>
+      </mat-tab>
+      <mat-tab label="Chat Conversation">
+        <ng-template matTabContent>
+          <qa-chat
+            #chat
+            class="chat"
+            [topicId]="topicWithAnswers.id"></qa-chat>
+        </ng-template>
+      </mat-tab>
+    </mat-tab-group>
   </ng-container>
 </div>
