--- a/apps/client/src/styles/_theme-variables.scss
+++ b/apps/client/src/styles/_theme-variables.scss
@@ -13,8 +13,8 @@ $rating-default-background: mat.get-color-from-palette($light-accent, 50);
 $rating-liked-background: mat.get-color-from-palette($light-accent, 400);
 $rating-disliked-background: mat.get-color-from-palette($light-warn, 400);
 
-$spinnerColor: mat.get-color-from-palette($light-primary);
-$backgroundColor: rgba(mat.get-color-from-palette($light-primary, 100), 0.7);
+$spinner-color: mat.get-color-from-palette($light-primary);
+$background-color: rgba(mat.get-color-from-palette($light-primary, 100), 0.7);
 
 $accent-field-background: rgba(mat.get-color-from-palette($light-accent, 50), 0.4);
 $accent-field-border: mat.get-color-from-palette($light-accent, 100);
@@ -23,3 +23,8 @@ $snackbar-action-button-color: mat.get-color-from-palette($light-warn, 300);
 
 $tag-item-background: mat.get-color-from-palette($light-accent, 100);
 $tag-item-border: mat.get-color-from-palette($light-accent, 800);
+
+$chat-message-border: #000;
+$chat-message-background: rgba(mat.get-color-from-palette($light-primary, 100), 0.7);
+$chat-users-message-background: rgba(mat.get-color-from-palette($light-accent, 100), 0.7);
+$chat-message-date-color: #424242;
