feat: about page

--- a/apps/client/src/app/about/about.component.html
+++ b/apps/client/src/app/about/about.component.html
@@ -1,1 +1,18 @@
-<p>about works!</p>
+<div class="container  container--narrow mat-typography">
+  <h1>🇺🇸 About "Question Answer" project</h1>
+  <p>This is a pet-project for educational purpose. It is a simplified clone of StackOverflow with chats for each topic. <a href="/api">Rest Api</a>
+  </p>
+  <br>
+  <h2>🇺🇦 Про "Question Answer" проект</h2>
+  <p>Це навчальний проект, спрощена версія StackOverflow з чатами для кожного обговорення. <a href="/api">Rest Api</a></p>
+
+  <br>
+
+  <p>🇺🇸 Technologies used / 🇺🇦 Використані технології:</p>
+  <ul>
+    <li>Front end: Angular 14, Angular Material 14, Socket.io(WebSocket for chats);</li>
+    <li>Back end: NestJS 9, Typeorm, Socket.io(WebSocket for chats);</li>
+    <li>Monorepo: nrwl/nx;</li>
+    <li>DataBase: PostgreSQL.</li>
+  </ul>
+</div>
