--- a/apps/client/src/app/chat/components/chat-message-input/chat-message-input.component.scss
+++ b/apps/client/src/app/chat/components/chat-message-input/chat-message-input.component.scss
@@ -8,7 +8,7 @@ input {
   flex-grow: 1;
   border: none;
   padding: 8px (15px + 40px) 8px 15px;
-  outline: revert;
+  border-radius: 5px;
 }
 
 button {
