--- a/apps/client/src/app/core/layout/components/header/header.component.html
+++ b/apps/client/src/app/core/layout/components/header/header.component.html
@@ -55,7 +55,7 @@
           [routerLink]="['auth', 'registration']"
           mat-raised-button
           color="primary">
-          Sign On
+          Sign In
         </a>
       </ng-template>
     </div>
