--- a/apps/client/src/app/topic/components/topic/topic.component.scss
+++ b/apps/client/src/app/topic/components/topic/topic.component.scss
@@ -31,7 +31,7 @@
   }
 
   &__body {
-    white-space: pre;
+    white-space: break-spaces;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid $accent-field-border;
